Add tab-complete, display message when all terrains have same priority